[project]
name = "pysmithchart"
version = "0.3.0"
authors = [
    { name = "Paul Staerke", email = "paul.staerke@gmail.com" },
    { name = "Scott Prahl", email = "scott.prahl@oit.edu" }
]
description = "A Python library extending Matplotlib to generate Smith Charts."
readme = "README.rst"
license = { text = "BSD" }
dependencies = [
    "matplotlib >= 3.7.0",
    "numpy >= 1.20",
    "scipy >= 1.6"
]
requires-python = ">=3.8"
keywords = ["Smith Chart", "impedance", "reflection", "RF engineering", "microwave"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = ["pytest >= 7.0"]

[project.urls]
"Homepage" = "https://github.com/scottprahl/pysmithchart"
"Bug Tracker" = "https://github.com/scottprahl/pysmithchart/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pylint]
disable = [
    "C0103", "C0209", "C0302",
    "R0902", "R0904", "R0912", "R0913", "R0914", "R0915", "R1702",
    "W0511"
]
max-line-length = 110

[tool.ruff]
line-length = 110
exclude = ["docs"]
lint.select = ["D", "E", "F", "W"]
lint.ignore = ["D200", "D212", "F403"]
lint.pydocstyle.convention = "google"

